# Scrabble-Game

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: hw3.h
src/: hw3.c  hw3_main.c
tests/: words.txt
tests/boards/: board01.txt  board02.txt  board03.txt  board04.txt  board05.txt  board06.txt  board07.txt  board08.txt  board09.txt
tests/expected_outputs/: big_board.txt  height_exceed_limit01.txt  height_exceed_limit02.txt  invalid_horiz_overlap02.txt  invalid_horiz_touch04.txt  invalid_placement01.txt  invalid_placement02.txt  invalid_placement04.txt  invalid_vert_touch03.txt  invalid_vert_touch04.txt  invalid_vert_touch06.txt  multiple01.txt  multiple02.txt  multiple03.txt  multiple04.txt  multiple05.txt  multiple06.txt  place_horizontal_word01.txt  place_horizontal_word02.txt  place_horizontal_word03.txt  place_horizontal_word04.txt  place_horizontal_word05.txt  place_horizontal_word06.txt  place_horizontal_word07.txt  place_one_tile01.txt  place_several_tiles01.txt  place_vertical_word01.txt  place_vertical_word02.txt  place_vertical_word03.txt  place_vertical_word04.txt  place_vertical_word05.txt  place_vertical_word06.txt  place_vertical_word07.txt  place_vertical_word08.txt  undo01.txt  undo02.txt  undo04.txt  undo05.txt
tests/include/: tests_aux.h
tests/src/: tests_aux.cpp  tests_multiple_turns.cpp  tests_multiple_turns_asan.cpp  tests_multiple_turns_valgrind.cpp  tests_place_tiles_invalid.cpp  tests_place_tiles_invalid_asan.cpp  tests_place_tiles_invalid_valgrind.cpp  tests_place_tiles_valid.cpp  tests_place_tiles_valid_asan.cpp  tests_place_tiles_valid_valgrind.cpp  tests_undo_place_tiles.cpp  tests_undo_place_tiles_asan.cpp  tests_undo_place_tiles_valgrind.cpp
tests/src/standalone_scripts/: height_exceed_limit02.c  initialize_big_board.c  invalid_horiz_no_touch02.c  invalid_horiz_resize01.c  invalid_placement03.c  invalid_vert_overlap01.c  invalid_vert_touch04.c  invalid_vert_touch08.c  multiple01.c  multiple02.c  multiple03.c  multiple04.c  multiple05.c  multiple06.c  place_horizontal_word07.c  place_one_tile01.c  undo01.c  undo02.c  undo03.c  undo04.c  undo05.c  undo06.c
